syntax = "proto3";

option go_package = "pkg.coulon.dev/taskmaster/internal/proto";

service Taskmaster {
    rpc List(Empty) returns (ProgramDescList) {}
    rpc Reload(Empty) returns (Empty) {}
    rpc Stop(Empty) returns (Empty) {}

    rpc ProgramStatus(Program) returns (ProgramDesc) {}
    rpc ProgramStart(Program) returns (Empty) {}
    rpc ProgramStop(Program) returns (Empty) {}
    rpc ProgramRestart(Program) returns (Empty) {}
}

enum Status {
    UNKNOWN = 0;
    UNSTARTED = 1;
    STARTING = 2;
    RUNNING = 3;
    STOPPING = 4;
    STOPPED = 5;
    ERRORED = 6;
}

message Program {
    string name = 1;
}

message ProgramDesc {
    string name = 1;
    Status status = 2;
    optional int32 pid = 3;
    optional int32 exitcode = 4;
}

message ProgramDescList {
    repeated ProgramDesc programs = 1;
}

message Empty {}
